Fully functional list builder

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,4 +1,8 @@
 #myNavbar{
     background-color: darkred;
-    box-shadow: 0 0 20px grey;
+    box-shadow: 0 0 10px grey;
+}
+
+.text{
+    color: white;
 }
