--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 #footer {
     background-color: darkred;
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
