--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,10 @@ html{
     background-color: wheat;
     font-family: 'Cinzel', serif;
 }
+
+@media only screen and (max-width: 600px) {
+    .content{
+        margin: 0% 5% 00% 5%;
+        padding: 2% 5% 10% 5%;
+    }
+  }
