--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,5 +1,5 @@
 #myNavbar{
-    background-color: darkred;
+    background-color: #650e0f;
     box-shadow: 0 0 10px grey;
     font-family: 'Cinzel', serif;
 }
